<resources>
    <string name="app_name">Shoppa</string>
    <string name="activity_add_card">Add new Card</string>
    <string name="activity_add_pocket_money">Add Pocket Money</string>
    <string name="activity_checkout">Checkout</string>
    <string name="activity_profile">Profile</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_card">Manage Card</string>
    <string name="fragment_add_card">Add New Card</string>
    <string name="fragment_pocket">Pocket Money</string>
    <string name="fragment_history">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tv_forgot_password">I forgot password</string>

    <!-- TODO: Login and Register activity Strings -->
    <string name="string_login">login</string>
    <string name="string_register">register</string>
    <string name="string_back">back</string>
    <string name="string_full_name">Full Name</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_confirm_password">Confirm Password</string>

    <!-- TODO: Main activity Strings -->
    <string name="string_today">Today</string>
    <string name="string_empty_money">RM 0.00</string>
    <string name="string_empty_today">You not yet to use Shoppa today</string>
    <string name="string_today_store">Store Name</string>
    <string name="string_today_spent">Total Spent</string>

    <!-- TODO: Shop activity Strings -->
    <string name="string_shop_empty_cart">Your shopping cart is empty</string>
    <string name="string_shop_product_img">Product image</string>
    <string name="string_shop_product_delete">Delete</string>
    <string name="string_shop_product_edit">Edit</string>
    <string name="string_shop_total">Total: </string>
    <string name="string_shop_price">Price: </string>
    <string name="string_shop_price_empty">RM 0.00</string>
    <string name="string_shop_quantity">Quantity: </string>
    <string name="string_shop_checkout">Checkout</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Checkout activity Strings -->
    <string name="radio_credit_card">Credit Card</string>
    <string name="radio_pocket_money">Pocket Money</string>
    <string name="string_checkout_total">Total Amount: </string>
    <string name="string_shop_current_pocket">Your Pocket Money: </string>
    <string name="string_shop_remain_pocket">Remaining: </string>
    <string name="string_no_card">No credit card found</string>
    <string name="string_add_card_now">Add Credit Card Now</string>
    <string name="string_shop_pay_now">Pay Now</string>
    <string name="string_shop_pay_by_pocket">Pay By Pocket Money</string>

    <!-- TODO: Manage card -->
    <string name="string_empty_card">You have not added any card yet</string>
    <string name="string_card_type">Card type</string>
    <string name="string_card_name">Card Holders Name</string>
    <string name="string_card_number">Card Number</string>
    <string name="string_cvv">CVV</string>
    <string name="string_exp_date">Expiration Date</string>
    <string name="string_add_card">Add New Card</string>
    <string name="string_choose_credit_card">Choose card</string>
    <string name="string_delete_credit_card">Delete card</string>
    <string name="string_visa_card">Visa</string>
    <string name="string_master_card">MasterCard</string>
    <string name="string_not_card">N/A</string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>

    <!-- TODO: Pocket Money -->
    <string name="string_current_pocket">Current</string>
    <string name="string_empty_pocket">0.00</string>
    <string name="string_notify_empty_pocket">Empty History</string>
    <string name="string_add_pocket_money">Add Pocket Money</string>
    <string name="string_send_money">Send Money</string>
    <string name="string_pocket_receiver_email">Receiver Email</string>
    <string name="string_pocket_send_amount">Amount</string>
    <string name="string_money_history_amount">Amount</string>
    <string name="string_money_history_time">Time</string>
    <string name="string_money_history_name">Name</string>

    <!-- TODO: History -->
    <string name="string_empty_history">You do not have record in this day</string>
    <string name="string_history_select_date">Select date</string>
    <string name="string_history_store_name">Store Name</string>
    <string name="string_history_total_spent">Total Spent</string>
    <string name="string_history_time">Time</string>
    <string name="string_history_method">Method</string>

    <!-- TODO: Profile -->
    <string name="string_profile_name">Name</string>
    <string name="string_profile_gender">Gender</string>
    <string name="string_profile_change_password">Change Password</string>
    <string name="string_profile_old_password">Old Password</string>
    <string name="string_profile_new_password">New Password</string>
    <string name="string_profile_confirm_new_password">Confirm New Password</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Side navigation -->
    <string name="string_profile">user profile</string>

    <!-- TODO: Error messages -->
    <string name="error_required_field">This field is required</string>
    <string name="error_email_invalid">Invalid email address</string>
    <string name="error_password_not_match">Password and confirm password are not match</string>
    <string name="error_invalid_receiver">Invalid receiver</string>
    <string name="error_over_amount">Your pocket money is not enough</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_zero_amount">Amount must be more than 0</string>

</resources>
