<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shoppa.shoppa.LoginFragment">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginBottom="16dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:hint="@string/string_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/string_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@string/font_family_light"
        android:text="@string/tv_forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/padding"
        android:background="@color/colorButtonPrimary"
        android:text="@string/string_login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:background="@color/colorButtonSecondary"
        android:text="@string/string_register" />

</LinearLayout>
