<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.shoppa.shoppa.AddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_card_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_new_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:fontFamily="@string/font_family_light"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/string_card_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="18dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="numberSigned"
            android:maxLength="16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/string_exp_date"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinner_card_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.95"
                android:entries="@array/month"
                android:fontFamily="@string/font_family_light" />

            <Spinner
                android:id="@+id/spinner_card_year"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:entries="@array/year"
                android:fontFamily="@string/font_family_light" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/string_cvv"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="18dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="numberSigned"
            android:maxLength="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/string_card_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPersonName" />

    </LinearLayout>

</RelativeLayout>
