<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    android:paddingStart="@dimen/padding"
    android:paddingTop="24dp">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="84dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/string_shop_product_img"
        android:src="@drawable/product1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_shop_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:text="RM 7.99"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_shop_quantity"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_product_quantity"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/quantity_array"
                android:fontFamily="@string/font_family_regular"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>